# AccelProf

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.config  README.md
backends/amd-rocm/: Makefile.config
backends/nv-compute/: Makefile.config
backends/nv-compute/gpu_src/include/: gpu_patch.h  gpu_utils.h
backends/nv-compute/src/: compute_sanitizer.cpp
backends/nv-nvbit/: Makefile.config
docs/docs/source/benchmarks/: samples.md
docs/docs/source/devel_guide/: extend.md
docs/docs/source/user_guide/: install.md
gpu_src/: gpu_patch_block_divergence_analysis.cu  gpu_patch_heatmap_analysis.cu  gpu_patch_pc_dependency.cu
gpu_src/include/: gpu_patch.h  gpu_utils.h
nv-compute/: Makefile
pyaccelprof/: CMakeLists.txt  setup.py
python/: Makefile  README.md  cluster_block_distribution.py  extract_ncu_metrics.py  pc_inefficiency_scan.py  pyaccelprof.cpp
sanalyzer/: Makefile.config
sanalyzer/src/: sanalyzer.cpp
src/: compute_sanitizer.cpp  torch_scope.cpp  torch_tensor.cpp  torch_tensor.h
tensor_scope/: Makefile  Makefile.config
tensor_scope/include/: torch_scope.h
tensor_scope/torch/: Makefile
